# mudd

./: .dockerignore  .env.example  .gitignore  .squawk.toml  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  justfile  lefthook.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/skills/add-check/: SKILL.md
.claude/skills/add-verb/: SKILL.md
.claude/skills/discord-py/: examples.md  reference.md
.claude/skills/gnu-recutils/: SKILL.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  docker.yaml
data/: CLAUDE.md  entities.rec
data/verbs/: on_attack.txt  on_look.txt  on_take.txt  on_touch.txt  on_use.txt
data/worlds/: CLAUDE.md  mansion-map.mmd  mansion.md  mansion.rec
docs/adr/: 0001-static-entity-system.md  0002-inventory-system.md  CLAUDE.md
migrations/: 001_users.sql  002_entities.sql  003_verbs.sql  004_rooms.sql
mudd/: __init__.py
mudd/cogs/: analytics.py  look.py  movement.py  ping.py  sync.py
mudd/services/: analytics.py  database.py  migrations.py  redis.py  valkey.py  verb_action.py  verb_loader.py  verb_matcher.py  visibility.py  zone_loader.py
scripts/: add_verb.py  generate_room_map.py  validate_world.py
tests/: conftest.py  test_entity_queries.py  test_verb_matcher.py  test_zone_loader.py
